# vibe-logger

./: README.md  pyproject.toml
src/vibe_logger/: analytics.py  cli.py  config.py  gamification.py  loader.py  models.py  watcher.py
src/vibe_logger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/vibe_logger/ui/: components.py  dashboard.py  live_session.py  sprites.py  viewer.py
src/vibe_logger/web/: api.py  app.py  ws.py
tests/: conftest.py  test_analytics.py  test_gamification.py  test_loader.py  test_sprites.py  test_watcher.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts  types.ts
web/src/components/: BadgeCard.tsx  Layout.tsx  SessionTable.tsx  StatsCard.tsx
web/src/hooks/: useAgentTracker.ts  useLiveContext.tsx
web/src/pages/: Activity.tsx  Arena.tsx  Dashboard.tsx  Explorer.tsx  Gamification.tsx  Live.tsx  Network.tsx  Overview.tsx  Profile.tsx
web/src/stores/: agentStore.tsx
web/src/three/: ActivityTerrain.tsx  AmbientParticles.tsx  CharacterArena.tsx  ParticleExplosion.tsx  SessionGraph.tsx
web/src/three/characters/: AgentCharacter.tsx  CharacterLabel.tsx  SpawnEffect.tsx
